--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,35 @@
+@import url('https://fonts.googleapis.com/css2?family=Chivo+Mono:ital,wght@0,100..900;1,100..900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: 'UncutSansLight';
+  src: url('/fonts/UncutSans-Light.woff2') format('woff2'),
+       url('/fonts/UncutSans-Light.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+  font-family: 'UncutSansRegular';
+  src: url('/fonts/UncutSans-Regular.woff2') format('woff2'),
+       url('/fonts/UncutSans-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+  font-family: 'UncutSansMedium';
+  src: url('/fonts/UncutSans-Medium.woff2') format('woff2'),
+       url('/fonts/UncutSans-Medium.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
 
 :root {
   --background: #ffffff;
@@ -17,5 +46,5 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'UncutSansLight', Arial, Helvetica, sans-serif;
 }
